# scrubid-iclr-pack

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CITATION.cff  MANIFEST.sha256  PATCH_REPORT.md  README.md  SPEC.md  paper_results_manifest.json  progress.md  pyproject.toml
bib/: citation_audit_table.md  citations_verified.md  references.bib
checklists/: artifact_checklist_iclr.md  ethics_checklist.md  reproducibility_checklist.md  scrubid_10of10_paper_taskboard.md
configs/: budgets.yaml  determinism.yaml  experiments.yaml  generators.yaml  interventions.yaml  logging_schema.yaml
outputs/: README.md
paper/: 00_PAPER_SNAPSHOT.md  01_ABSTRACT.md  02_INTRO_NOVELTY.md  03_RELATED_WORK.md  04_METHOD.md  05_EXPERIMENTS.md  06_LIMITATIONS_ETHICS.md  07_APPENDIX.md  PAPER.md  README.md  gpt_pro_review.md
scripts/: resume_paper_bundle.py
spec/: 00_CANONICAL.md  01_VISION_SCOPE.md  02_FORMAL_DEFINITIONS.md  03_INTERVENTION_FAMILIES.md  04_IDENTIFIABILITY_DEFINITIONS.md  05_THEORY_PROPOSITION.md  06_DIAGNOSTICS_RR_SSS_CC.md  07_SYNTHETIC_SUITE_GENERATOR.md  08_REAL_MODEL_CASE_STUDIES.md  09_CANDIDATE_GENERATORS.md  10_METRICS_STATS_PROTOCOL.md  11_DETERMINISM_REPRODUCIBILITY.md  12_REPO_STRUCTURE_FILES.md  13_CLI_RUNBOOK.md  14_RUN_RECORD_SCHEMA.md  15_LOGGING_SCHEMA.md  16_TEST_PLAN.md  17_CI_RELEASE_PLAN.md  18_RESULTS_TABLE_SKELETONS.md  19_PAPER_WRITING_PLAN.md  20_SUBMISSION_CHECKLIST.md  21_RISK_REGISTER.md  22_IMPLEMENTATION_CONTRACT.md
tasks/: PHASE_0_FOUNDATION.md  PHASE_1_SYNTHETIC_SUITE.md  PHASE_2_INTERVENTIONS_AND_GENERATORS.md  PHASE_5_PAPER_CAMERA_READY.md  (+4 more)
(+3651 files in other folders)
